--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
     <h1>
       Captcha
     </h1>
+    <a href="/docs">API docs</a>
+    <br/>
+    <a href="/swagger.json">swagger.json</a>
   </body>
 </html>
